--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,4 @@
-<nav>
-  <a routerLink="/library">Ma bibliothèque</a>
-  <a routerLink="/add-game">Ajouter un jeu</a>
-</nav>
-<router-outlet></router-outlet>
+<router-outlet>
+  <a routerLink="library"></a>
+  <a routerLink="/add-game"></a>
+</router-outlet>
