--- a/src/app/components/game-detail/game-detail.scss
+++ b/src/app/components/game-detail/game-detail.scss
@@ -8,13 +8,13 @@
 .back-btn {
     background: none;
     border: none;
-    color: #aaa;
+    color: #000000;
     font-size: 1.1rem;
     cursor: pointer;
     margin-bottom: 20px;
 
     &:hover {
-        color: white;
+        font-size: 1.2rem;
     }
 }
 
